# qclassifier

./: PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: 01_exploration.ipynb
src/qiskit_classifier/: __init__.py  train.py
src/qiskit_classifier/circuits/: __init__.py  feature_map.py
src/qiskit_classifier/data/: __init__.py  loader.py
src/qiskit_classifier/models/: __init__.py  vqc_classifier.py
src/qiskit_classifier/utils/: __init__.py  visualization.py
tests/: test_circuits.py  test_data.py  test_model.py
